[package]
name = "derive_display_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true

[dependencies]
darling = "0.20.10"
heck = "0.5.0"
manyhow = "0.11.4"
proc-macro2 = { version = "1.0.93", default-features = false }
quote = { version = "1.0.38", default-features = false }
syn = { version = "2.0.98", default-features = false }
